--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,11 @@
 {
-    "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
-}
+    "builds": [
+      {
+        "src": "index.html",
+        "use": "@vercel/static"
+      }
+    ],
+    "outputDirectory": "dist",
+    "cleanUrls": true
+  }
+  
