--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,7 @@
 {
-    "builds": [
-      {
-        "src": "index.html",
-        "use": "@vercel/static"
-      }
-    ],
     "outputDirectory": "dist",
-    "cleanUrls": true
+    "rewrites": [
+      { "source": "/(.*)", "destination": "/index.html" }
+    ]
   }
   
