--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,3 @@
 {
-    "outputDirectory": "dist",
-    "rewrites": [
-      { "source": "/(.*)", "destination": "/index.html" }
-    ]
+    "rewrites": [{ "source": "/(.*)", "destination": "/" }]
   }
-  
